...
                                    searchText,
                                    sortByHighestFloorPrice,
                                    sortByLowestFloorPrice
                                )
                                filterApplied = searchText.isNotEmpty() || sortByHighestFloorPrice
                            }) {
                                Text("Highest floor price")
                            }
                            Button(onClick = {
                                sortByLowestFloorPrice = !sortByLowestFloorPrice
                                sortByHighestFloorPrice = false
                                filteredCollectionList = filterAndSortCollections(
                                    nftCollectionList,
...
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Text(text = "Floor Price: ${nftCollection.openSeaMetadata?.floorPrice?.toString() ?: ""}")
                    Spacer(modifier = Modifier.width(4.dp))
                    Image(
                        painter = painterResource(id = R.drawable.ethlogo),
                        contentDescription = "ETH Logo",
                        modifier = Modifier
                            .clip(CircleShape)
                            .size(15.dp)
                    )
                }
                Text(text = "Amount owned: " + nftCollection.numDistinctTokensOwned.toString())
...
